--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ function tip() {prompt("新版本使用所需体验码","yuantuofreevpn")}
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="http://vpn.yuantuo.xyz/"><img src="./files/logo.png" alt="vpn"></a>
+      <a class="navbar-brand" href="http://vpn.yuantuo.xyz/"><img src="./档案/logo.png" alt="vpn"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
