--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ function tip() {prompt("新版本使用所需体验码","yuantuofreevpn")}
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="http://vpn.yuantuo.xyz/"><img src="./档案/logo.png" alt="vpn"></a>
+      <a class="navbar-brand" href="http://vpn.yuantuo.xyz/"><img src="./files/logo.png" alt="vpn"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -54,8 +54,8 @@ function tip() {prompt("新版本使用所需体验码","yuantuofreevpn")}
   <div class="swiper-wrapper" style="transition-duration: 0ms; transform: translate3d(0px, 0px, 0px);">
     <div class="swiper-slide slide-2 swiper-slide-active" style="width: 437px;">
       <div class="text">
-        <h4>潜心研发 推出1.3版急速vpn</h4>
-    <h3>体验码yuantuofreevpn</h3>     <p>vpn <sup>1.3</sup> 安全性更高，稳定性更强</p>
+        <h4>潜心研发 推出1.4版急速vpn</h4>
+    <h3>体验码yuantuofreevpn</h3>     <p>vpn <sup>1.4</sup> 安全性更高，稳定性更强</p>
         <p>相比前代vpn，加速50%，满足崇尚高端品质的用户、企业定制化需求</p>
         <div class="cart">
           <a href="./setup.exe" class="btn btn-reverse primary btn-lg">免费试用3天</a>
